syntax = "proto3";

package v1.sandbox;
option go_package="github.com/msqtt/sb-judger/api/pb/v1/sandbox;pb_sb";

import "sandbox/case_message.proto";
import "sandbox/lang_enum.proto";

message Input {
	string hash_name = 1;
	Language lang = 2;
	uint32 time = 3;	
	uint32 memory = 4;
	string mnt_path = 5;
	repeated Case cases = 6;
}
